<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EC3.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nav_bottom_calendar"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EC3.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nav_bottom_favorites"
        />
    <com.google.android.material.button.MaterialButton
    style="@style/Widget.EC3.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nav_bottom_courses"
        />

    <View
    android:layout_width="120dp"
    android:layout_height="1dp"
    android:layout_margin="2dp"
    android:background="?attr/colorPrimaryVariant"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EC3.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nav_bottom_settings"
        />

</merge>