<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_arrow_circle_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_sub_menu"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_image_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Isaac Huanca Bravo"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@isaacKu"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_edit_image"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_gravity="center"
                android:background="@drawable/section_button_edit"
                android:text="@string/button_edit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_outline_edit_24"
                android:drawablePadding="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="28dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:background="@color/gray">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_secction"
                    android:textColor="@color/white"
                    android:textSize="20dp"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="2dp"
                android:padding="15dp"
                android:background="@color/white"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/optionLanguage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_outline_language_24"
                        android:layout_marginTop="5dp"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/optionLanguage"
                        android:text="@string/settings_option_languaje" />

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_option_languajeSelected"
                        android:textAllCaps="false"
                        android:textSize="11dp"
                        android:textStyle="normal"
                        app:icon="@drawable/ic_outline_arrow_right_black_24"
                        app:iconGravity="textEnd" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/optionDark"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_outline_brightness_2_24" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_option_darkMode"

                        android:layout_toEndOf="@+id/optionDark"
                        android:layout_marginStart="16dp"
                        />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/settingsSwitch" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/optionWifi"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_outline_wifi_24"
                        android:padding="8dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_option_wifi"

                        android:layout_toEndOf="@+id/optionWifi"
                        android:layout_marginStart="16dp"
                        />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/settingsSwitch" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/optionLogOut"
                        android:src="@drawable/ic_baseline_exit_to_app_24"
                        android:padding="8dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/settings_option_logout"

                        android:layout_toEndOf="@+id/optionLogOut"
                        android:layout_marginStart="16dp"
                        />
                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="salirrr"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textSize="11dp"
                        android:textStyle="normal"
                        app:icon="@drawable/ic_outline_arrow_right_black_24"
                        app:iconGravity="textEnd" />
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>